header using flexbox

--- a/index4.html
+++ b/index4.html
@@ -8,8 +8,13 @@
     <link href="./style3.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <a href="#"><img src="./musiclogo.png" class="logo" width="170px" /></a>
+    <header id="main-header">
+      <a href="#" class="logo-link"
+        ><img src="./musiclogo.png" class="logo"
+      /></a>
+      <nav id="profile-pic">
+        <img src="./images/user.png" class="profile" />
+      </nav>
     </header>
   </body>
 </html>
