added an alpha search bar

--- a/index4.html
+++ b/index4.html
@@ -12,9 +12,31 @@
       <a href="#" class="logo-link"
         ><img src="./musiclogo.png" class="logo"
       /></a>
+      <section>
+        <img class="search-img" />
+        <input type="search" id="search-bar" />
+      </section>
       <nav id="profile-pic">
         <img src="./images/user.png" class="profile" />
       </nav>
     </header>
+    <main>
+      <section class="sidebar">
+        <img class="side-bar1" />
+        <img class="side-bar2" />
+        <img class="side-bar3" />
+        <img class="side-bar4" />
+      </section>
+      <section class="music-card">
+        <img class="card1" />
+        <img class="card2" />
+        <img class="card3" />
+        <img class="card4" />
+        <img class="card5" />
+        <img class="card6" />
+        <img class="card7" />
+        <img class="card8" />
+      </section>
+    </main>
   </body>
 </html>
