--- a/index4.html
+++ b/index4.html
@@ -9,23 +9,33 @@
   </head>
   <body>
     <header id="main-header">
+      <button id="main-menu">
+        <img
+          src="./ICONS/menu.png"
+          width="40px"
+          height="40px"
+          style="background-color: #1d223e"
+          id="main-menu-img" />
+      </button>
       <a href="#" class="logo-link"
         ><img src="./musiclogo.png" class="logo"
       /></a>
       <section>
-        <img class="search-img" />
-        <input type="search" id="search-bar" />
+        <input
+          type="search"
+          id="search-bar"
+          style="height: 40px; width: 400px; border-radius: 2px"
+          placeholder="Search songs, artist, albums" />
       </section>
       <nav id="profile-pic">
         <img src="./images/user.png" class="profile" />
       </nav>
     </header>
     <main>
-      <section class="sidebar">
-        <img class="side-bar1" />
-        <img class="side-bar2" />
-        <img class="side-bar3" />
-        <img class="side-bar4" />
+      <section class="sidebar-container">
+        <a><img src="./ICONS/home icon.png" class="sidebar" /></a>
+        <a><img src="./ICONS/library music icon.png" class="sidebar" /></a>
+        <a><img src="./ICONS/bookmark icon.png" class="sidebar" /></a>
       </section>
       <section class="music-card">
         <img class="card1" />
