--- a/index4.html
+++ b/index4.html
@@ -9,25 +9,18 @@
   </head>
   <body>
     <header id="main-header">
-      <button id="main-menu">
-        <img
-          src="./ICONS/menu.png"
-          width="40px"
-          height="40px"
-          style="background-color: #1d223e"
-          id="main-menu-img" />
-      </button>
-      <a href="#" class="logo-link"
+      <button class="left-items" id="main-menu"></button>
+      <a class="left-items" href="#" id="logo-link"
         ><img src="./musiclogo.png" class="logo"
       /></a>
-      <section>
+      <section class="left-items">
         <input
           type="search"
           id="search-bar"
           style="height: 40px; width: 400px; border-radius: 2px"
           placeholder="Search songs, artist, albums" />
       </section>
-      <nav id="profile-pic">
+      <nav class="right-items" id="profile-pic">
         <img src="./images/user.png" class="profile" />
       </nav>
     </header>
