sidebar text added

--- a/index4.html
+++ b/index4.html
@@ -26,9 +26,22 @@
     </header>
     <main>
       <section class="sidebar-container">
-        <a><img src="./ICONS/home icon.png" class="sidebar" /></a>
-        <a><img src="./ICONS/library music icon.png" class="sidebar" /></a>
-        <a><img src="./ICONS/bookmark icon.png" class="sidebar" /></a>
+        <a class="sidebar-link"
+          ><img src="./ICONS/home icon.png" class="sidebar" />
+          <b class="sidebar-text">HOME</b></a
+        >
+        <a class="sidebar-link"
+          ><img src="./ICONS/library music icon.png" class="sidebar" /><b
+            class="sidebar-text"
+            >LIBRARY</b
+          ></a
+        >
+        <a class="sidebar-link"
+          ><img src="./ICONS/bookmark icon.png" class="sidebar" /><b
+            class="sidebar-text"
+            >BOOKMARKS</b
+          ></a
+        >
       </section>
       <section class="music-card">
         <img class="card1" />
