sider & menu functionality completed

--- a/index4.html
+++ b/index4.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANUSIC</title>
     <link href="./style3.css" rel="stylesheet" />
+    <script src="./script2.js" defer></script>
   </head>
   <body>
     <header id="main-header">
-      <button class="left-items" id="main-menu"></button>
+      <button
+        class="left-items"
+        id="main-menu"
+        onclick="sidebarCollapse()"></button>
       <a class="left-items" href="#" id="logo-link"
         ><img src="./musiclogo.png" class="logo"
       /></a>
@@ -42,6 +46,7 @@
             >BOOKMARKS</b
           ></a
         >
+        <!-- <p id="text" style="color: aliceblue">MY NAME</p> -->
       </section>
       <section class="music-card">
         <img class="card1" />
