fix somethings with sign in page

--- a/index.html
+++ b/index.html
@@ -2,32 +2,45 @@
 <!-- saved from url=(0016)chrome://newtab/ -->
 <html>
   <head>
-    <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./script.js"></script>
     <title>Sign In</title>
-    <link href="./style1.css" rel="stylesheet">
+    <link href="./style1.css" rel="stylesheet" />
   </head>
   <body>
     <div class="Registration">
-      <img src="musiclogo.png" class="logo" width="300px">
+      <img src="musiclogo.png" class="logo" width="300px" />
       <nav>
-        <p><span><a class="Nav" href="./index.html" id="space">SIGN IN</a></span><span><a class="Nav" href="./index2.html" id="space2">SIGN UP</span></a></p>
+        <p>
+          <span><a class="Nav" href="./index.html" id="space">SIGN IN</a></span
+          ><a class="Nav" href="./index2.html" id="space2">SIGN UP</a>
+        </p>
       </nav>
       <button type="button" class="signin-btn">SIGN IN WITH FACEBOOK</button>
       <form action="index3.html">
-        <hr>
+        <hr />
         <p class="or">OR</p>
-        <input type="email" placeholder="Your Email" class="input-box"
-			  required>
+        <input
+          type="email"
+          placeholder="Your Email"
+          class="input-box"
+          required />
         <div>
-          <input type="password" placeholder="Your Password" class="input-box" id="myInput" maxlength="10"
-			     required>
-          <input class="eye" type="checkbox" onclick="myFunction()">
+          <input
+            type="password"
+            placeholder="Your Password"
+            class="input-box"
+            id="myInput"
+            maxlength="10"
+            required />
+          <input class="eye" type="checkbox" onclick="myFunction()" />
         </div>
-        <p class="stay"><span><input type="checkbox">stay signed in</span></p>
+        <p class="stay">
+          <span><input type="checkbox" />stay signed in</span>
+        </p>
         <button type="submit" class="signup-btn">SIGN IN</button>
-        <P><a class="forpas" href="#">Forgot Password ?</a></P>
+        <p><a class="forpas" href="#">Forgot Password ?</a></p>
       </form>
     </div>
   </body>
