fix some layout issues

--- a/index3.html
+++ b/index3.html
@@ -48,7 +48,7 @@
             ><img src="./ICONS/help.png" class="profile-icon" alt="help icon" />
             <h4>Help</h4></a
           >
-          <a href="#" class="profile-link"
+          <a href="./index.html" class="profile-link"
             ><img
               src="./ICONS/logout.png"
               class="profile-icon"
@@ -58,7 +58,7 @@
         </nav>
       </nav>
     </header>
-    <main>
+    <main id="music-page">
       <section class="sidebar-container">
         <a class="sidebar-link"
           ><img src="./ICONS/home icon.png" class="sidebar" />
@@ -76,17 +76,13 @@
             >BOOKMARKS</b
           ></a
         >
-        <!-- <p id="text" style="color: aliceblue">MY NAME</p> -->
       </section>
+      <h4 id="top-songs">Today's Top Songs</h4>
       <section class="music-card">
-        <img class="card1" />
-        <img class="card2" />
-        <img class="card3" />
-        <img class="card4" />
-        <img class="card5" />
-        <img class="card6" />
-        <img class="card7" />
-        <img class="card8" />
+        <section class="card"></section>
+        <section class="card"></section>
+        <section class="card"></section>
+        <section class="card"></section>
       </section>
     </main>
   </body>
