fixed some bugs

--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@
         <input
           type="search"
           id="search-bar"
-          style="height: 40px; width: 400px; border-radius: 2px"
+          style="height: 40px; width: 350px; border-radius: 2px; flex: 1"
           placeholder="Search songs, artist, albums" />
       </section>
       <nav class="right-items" id="profile-pic">
@@ -59,7 +59,7 @@
       </nav>
     </header>
     <section class="sidebar-container">
-      <a class="sidebar-link"
+      <a class="sidebar-link" id="home"
         ><img src="./ICONS/home icon.png" class="sidebar" />
         <b class="sidebar-text">HOME</b></a
       >
