--- a/index3.html
+++ b/index3.html
@@ -93,24 +93,57 @@
       <h4 id="top-songs" style="color: whitesmoke">Today's Top Songs</h4>
       <section class="music-card">
         <section class="card">
+          <img class="songCover" />
           <h3 class="topSongsName">Song Name</h3>
           <h3 class="topSongsArtist">Song Artist</h3>
         </section>
         <section class="card">
+          <img class="songCover" />
           <h3 class="topSongsName">Song Name</h3>
           <h3 class="topSongsArtist">Song Artist</h3>
         </section>
         <section class="card">
+          <img class="songCover" />
           <h3 class="topSongsName">Song Name</h3>
           <h3 class="topSongsArtist">Song Artist</h3>
         </section>
         <section class="card">
+          <img class="songCover" />
           <h3 class="topSongsName">Song Name</h3>
           <h3 class="topSongsArtist">Song Artist</h3>
         </section>
         <section class="card">
+          <img class="songCover" />
           <h3 class="topSongsName">Song Name</h3>
           <h3 class="topSongsArtist">Song Artist</h3>
+        </section>
+      </section>
+      <h4 id="albumsTitle" style="color: whitesmoke">Albums</h4>
+      <section class="music-card">
+        <section class="card">
+          <img class="albumCover" />
+          <h3 class="albumName">Album Name</h3>
+          <h3 class="albumArtist">Album Artist</h3>
+        </section>
+        <section class="card">
+          <img class="albumCover" />
+          <h3 class="albumName">Album Name</h3>
+          <h3 class="albumArtist">Album Artist</h3>
+        </section>
+        <section class="card">
+          <img class="albumCover" />
+          <h3 class="albumName">Album Name</h3>
+          <h3 class="albumArtist">Album Artist</h3>
+        </section>
+        <section class="card">
+          <img class="albumCover" />
+          <h3 class="albumName">Album Name</h3>
+          <h3 class="albumArtist">Album Artist</h3>
+        </section>
+        <section class="card">
+          <img class="albumCover" />
+          <h3 class="albumName">Album Name</h3>
+          <h3 class="albumArtist">Album Artist</h3>
         </section>
       </section>
     </main>
