fix more responsiveness #[3]

--- a/index3.html
+++ b/index3.html
@@ -189,31 +189,31 @@
       </section>
       <h4 id="albumsTitle" style="color: whitesmoke">Artists</h4>
       <section class="music-card">
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
-        <section class="card">
+        <section class="card2">
           <img class="artist" />
           <h3 class="artistName">Artist Name</h3>
         </section>
