update favorite and add to library button

--- a/index3.html
+++ b/index3.html
@@ -78,13 +78,13 @@
         <b class="sidebar-text">HOME</b></a
       >
       <a class="sidebar-link"
-        ><img src="./ICONS/library.png" class="sidebar" /><b
+        ><img src="./ICONS/library-sidebar.png" class="sidebar" /><b
           class="sidebar-text"
           >LIBRARY</b
         ></a
       >
       <a class="sidebar-link"
-        ><img src="./ICONS/favourite-icon.png" class="sidebar" /><b
+        ><img src="./ICONS/favourite-icon-sidebar.png" class="sidebar" /><b
           class="sidebar-text"
           >FAVORITES</b
         ></a
