audiobar background added

--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,7 @@
     <link href="./musiclogo.png" rel="icon" type="image/x-icon" />
     <link href="./styles/mainPage.css" rel="stylesheet" />
     <link href="./styles/artistStyle.css" rel="stylesheet" />
+    <link href="./styles/audioPlayer.css" rel="stylesheet" />
     <script src="./src/links.js" type="module"></script>
     <script src="./src/script2.js" type="module"></script>
   </head>
@@ -219,5 +220,17 @@
         </section>
       </section>
     </main>
+    <section id="audioPlayer">
+      <audio id="audio"></audio>
+      <div id="previousBtn"></div>
+      <div id="playPauseBtn"></div>
+      <div id="nextBtn"></div>
+      <div id="artistName"></div>
+      <div id="songName"></div>
+      <input id="volumeBtn" type="range" />
+      <div id="repeatBtn"></div>
+      <div id="shuffleBtn"></div>
+      <div id="audioCollapse"></div>
+    </section>
   </body>
 </html>
