--- a/index3.html
+++ b/index3.html
@@ -10,6 +10,7 @@
     <link href="./styles/artistStyle.css" rel="stylesheet" />
     <link href="./styles/audioPlayer.css" rel="stylesheet" />
     <script src="./src/links.js" type="module"></script>
+    <script src="./src/audioPlayer.js" type="module"></script>
     <script src="./src/script2.js" type="module"></script>
   </head>
   <body>
