Added experimental song cover in audiobar

--- a/index3.html
+++ b/index3.html
@@ -229,6 +229,7 @@
         <img id="nextBtn" />
         <h4 id="songDuration">NaN / NaN</h4>
       </div>
+      <img id="songImg" width="70px" height="40px" />
       <div id="audioSongInfo">
         <div id="audioName">SONG NAME</div>
         <div id="audioArtist">ARTIST</div>
