Successfully connected to firebase storage

--- a/index3.html
+++ b/index3.html
@@ -223,7 +223,7 @@
       </section>
     </main>
     <section id="audioPlayer">
-      <audio id="audio"></audio>
+      <audio id="audio" controls></audio>
       <div id="left-items">
         <img id="previousBtn" />
         <img id="playPauseBtn" />
