implemented audio for  play button of top songs

--- a/index3.html
+++ b/index3.html
@@ -12,6 +12,7 @@
     <script src="./src/links.js" type="module"></script>
     <script src="./src/audioPlayer.js" type="module"></script>
     <script src="./src/script2.js" type="module"></script>
+    <script src="./src/musicLinks.js" type="module"></script>
     <script src="./src/fireStoreConnect.js" type="module"></script>
   </head>
   <body>
@@ -222,8 +223,9 @@
         </section>
       </section>
     </main>
+    <input id="progressBar" type="range" />
     <section id="audioPlayer">
-      <audio id="audio" controls></audio>
+      <audio id="audio"></audio>
       <div id="left-items">
         <img id="previousBtn" />
         <img id="playPauseBtn" />
